# BrownianMotion

./: README.md  pyproject.toml
pygbm/: cli.py  gbm_simulator.py
